[gd_scene load_steps=22 format=3 uid="uid://ck3xgi5xtcg3o"]

[ext_resource type="Texture2D" uid="uid://b5by6kttc7dc6" path="res://assets/Boss shooting pose.png" id="1_nrpq4"]
[ext_resource type="Script" path="res://scenes/boss.gd" id="1_q378b"]
[ext_resource type="PackedScene" uid="uid://jw5bme151i83" path="res://hp_bar.tscn" id="2_jnetk"]
[ext_resource type="Texture2D" uid="uid://3r1052xutrl6" path="res://assets/Boss death.png" id="2_kqnqg"]
[ext_resource type="Texture2D" uid="uid://cs0mb85p2dltb" path="res://assets/Boss stand.png" id="3_twq6t"]
[ext_resource type="Shader" path="res://resources/hp_bar.gdshader" id="3_yeoc1"]
[ext_resource type="Texture2D" uid="uid://c4ictlycavsql" path="res://assets/Boss walk1.png" id="4_8xwa8"]
[ext_resource type="Texture2D" uid="uid://bnky1yl5ppvhf" path="res://assets/Boss walk2.png" id="5_k3v0f"]
[ext_resource type="PackedScene" uid="uid://4s5l8issnoat" path="res://scenes/components/attackable.tscn" id="6_8o0kh"]
[ext_resource type="AudioStream" uid="uid://cumcd3ltns2r0" path="res://sound/HumanDead/S1.wav" id="8_xjsc3"]
[ext_resource type="AudioStream" uid="uid://6o6m8rs04dff" path="res://sound/HumanDead/S2.wav" id="9_o0jmq"]
[ext_resource type="AudioStream" uid="uid://bstxdoq5gjicq" path="res://sound/HumanDead/S3.wav" id="10_48uph"]
[ext_resource type="AudioStream" uid="uid://cqai2gyi24565" path="res://sound/BossSound/BossGetHit.wav" id="11_qm6wt"]
[ext_resource type="AudioStream" uid="uid://bydrqseppttb2" path="res://sound/BossSound/BossAttack.wav" id="13_fgjo7"]
[ext_resource type="AudioStream" uid="uid://bkuc0ngoai71v" path="res://sound/BossSound/BossWalkSound.wav" id="14_hs74h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ffpne"]
resource_local_to_scene = true
shader = ExtResource("3_yeoc1")
shader_parameter/hp = 10.0
shader_parameter/max_hp = 10.0

[sub_resource type="SpriteFrames" id="SpriteFrames_ppe02"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_nrpq4")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kqnqg")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_twq6t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8xwa8")
}, {
"duration": 1.0,
"texture": ExtResource("5_k3v0f")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_acfs2"]
radius = 99.0808

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_o2f3q"]
random_pitch = 1.2
random_volume_offset_db = 2.0
streams_count = 3
stream_0/stream = ExtResource("8_xjsc3")
stream_1/stream = ExtResource("9_o0jmq")
stream_2/stream = ExtResource("10_48uph")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_h2hdl"]
random_pitch = 1.2
random_volume_offset_db = 2.0
streams_count = 1
stream_0/stream = ExtResource("11_qm6wt")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vy0g3"]
random_pitch = 1.1
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("14_hs74h")

[node name="Boss" type="Node2D"]
script = ExtResource("1_q378b")

[node name="HpBar" parent="." node_paths=PackedStringArray("_attackable") instance=ExtResource("2_jnetk")]
material = SubResource("ShaderMaterial_ffpne")
position = Vector2(-1, -125)
scale = Vector2(2, 2)
_attackable = NodePath("../Attackable")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(27, 18)
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_ppe02")
animation = &"attack"

[node name="Attackable" parent="." instance=ExtResource("6_8o0kh")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attackable"]
shape = SubResource("CircleShape2D_acfs2")

[node name="DeathAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_o2f3q")
volume_db = 2.0
pitch_scale = 0.7

[node name="HurtAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_h2hdl")

[node name="WalkAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_vy0g3")
volume_db = -8.0

[node name="AttackAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_fgjo7")

[node name="BackupMissileTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="FallBackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="MissileSpawnPosition" type="Marker2D" parent="."]
position = Vector2(37, 147)
